Refactor: modificando a logica do projeto, sobre salvamento de dados